# word-search-algorithms-comparison

./: README.md
project/: BoyerMoore.cpp  BoyerMoore.h  CMakeLists.txt  StringAlgorithms.cpp  Trie.cpp  Trie.h  TrieNode.h  brute_force_algorithms.cpp  brute_force_algorithms.h  main.cpp  read_helpers.cpp  read_helpers.h  test_helpers.cpp  test_helpers.h
results/: tests_data.numbers
